fix spacing between questions and comments

--- a/producthunt/app/assets/stylesheets/feedbacks.scss
+++ b/producthunt/app/assets/stylesheets/feedbacks.scss
@@ -1,5 +1,10 @@
 .feedback-container .feedback-user-container {
+  margin-top: 15px;
   margin-left: 0px;
+}
+
+.feedback-container .feedback-comments-container {
+  margin-top: 20px;
 }
 
 .user-picture img {
@@ -16,6 +21,10 @@
 .feedback-container .row {
   max-width: 90%;
   margin-left: 0px;
+}
+
+.row .comment {
+  padding-left: 0px;
 }
 
 .feedback-container {
